refactor: URL path build